--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,70 @@
-h3 {
-    color: white;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap');
+
+* {
+    box-sizing: border-box;
 }
+
+body {
+    align-items: center;
+    display: flex;
+    font-family: 'Roboto', sans-serif; ;
+    height: 100vh;
+    justify-content: center;
+    margin: 0;
+    overflow: hidden;
+}
+
+.container {
+    display: flex;
+    width: 85vw;
+    
+
+}
+.panel {
+    background-size: auto 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 50px 25px;
+    color: rgb(255, 254, 254);
+    cursor: pointer;
+    flex: 0.5;
+    height: 80vh;
+    
+    margin: 10px;
+    position: relative;
+    transition: flex 0.7s ease-in;
+    
+}
+
+.panel h3 {
+    
+    font-size: 24px;
+    position: absolute;
+    bottom: 5%;
+    left: 10%;
+    margin: 0;
+    opacity: 0;
+    min-width: auto;
+}
+
+.panel.active {
+    flex: 5;
+    
+}
+    
+.panel.active h3 {
+    opacity: 1;
+    transition: opacity 0.3s ease-in 0.4s;
+}
+
+@media (max-width: 480px) {
+  .container {
+            width: 100vw;
+        }
+
+        .panel:nth-of-type(4),
+        .panel:nth-of-type(5) {
+            display: none;
+        }
+
+    }
